editar nome publicação

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -121,7 +121,7 @@
                 <h3 class="uk-card-title">Documentação SSEQV</h3>
                 <p align="center"><span class="uk-label uk-label-danger uk-margin-small-right">PDF</span><a class="uk-button uk-button-text"
                   href="assets/anexos/Sinopse_ProjetoSSEQV.pdf" download>
-                  Baixar Documentação Completa</a></p>
+                  Sinopse do Projeto SSEQV</a></p>
               </div>
             </div>
           </li>
