seção financiado ajustada]

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="margin uk-position-relative uk-visible-toggle uk-light" tabindex="-1"
   uk-slideshow="autoplay: true; animation: fade; max-height: 400; min-height: 400">
 
-  <ul class="uk-slideshow-items">
+  <ul class="uk-slideshow-items uk-margin-top">
     <li>
       <img src="https://getuikit.com/docs/images/light.jpg" alt="" uk-cover>
       <div class="uk-overlay uk-overlay-primary uk-position-bottom uk-text-center uk-transition-slide-bottom">
