--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -7,12 +7,12 @@
   </div>
 </nav>
 
-<nav class="uk-navbar-container uk-margin-bottom uk-visible@m" uk-navbar uk-sticky="bottom: #offset">
+<nav class="uk-navbar-container uk-visible@m" uk-navbar uk-sticky="bottom: #offset">
 
   <div class="uk-navbar-left">
 
-    <div class="uk-margin-xlarge-left">
-      <a style="max-height: 50px" class="uk-navbar-item uk-logo" href="#">SSEQV</a>
+    <div class="uk-margin-large-left">
+      <a style="max-height: 50px;" class="uk-navbar-item uk-logo" href="#">SSEQV</a>
       <span class="uk-text-meta">Sistema de Socialização em Qualidade de Vida do Ministério da Saúde</span>
     </div>
 
