--- a/src/app/sobre/sobre.component.html
+++ b/src/app/sobre/sobre.component.html
@@ -1,7 +1,7 @@
-<div class="uk-section description">
-  <div class="bg-financiadores uk-text-center uk-padding-small uk-margin-medium-bottom">
-    <h2>Projeto financiado e mantido pelo Ministério da Saúde/Fundo Nacional de Saúde</h2>
-  </div>
+<div id="description" class="uk-section description">
+    <div class="bg-financiadores uk-text-center uk-padding-small uk-margin-medium-bottom">
+      <div class="financiado"><h2>Projeto financiado e mantido pelo Ministério da Saúde/Fundo Nacional de Saúde</h2></div>
+    </div>
   <div class="uk-container uk-flex uk-flex-center">
     <div>
       <h1 align="center" id="sobre">
