--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -18,8 +18,7 @@
     </li>
     <li>
       <img src="https://getuikit.com/docs/images/photo.jpg" alt="" uk-cover>
-      <div
-        class="uk-overlay uk-overlay-primary uk-position-bottom uk-text-center uk-transition-slide-bottom">
+      <div class="uk-overlay uk-overlay-primary uk-position-bottom uk-text-center uk-transition-slide-bottom">
         <h3 class="uk-margin-remove">3</h3>
         <p class="uk-margin-remove">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
       </div>
@@ -49,17 +48,20 @@
 
     <div uk-slider="autoplay: true; center: true; index: 1">
 
-      <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1">
+      <div class="uk-position-relative uk-visible-toggle" tabindex="-1">
 
         <ul class="uk-slider-items uk-child-width-1-3@s uk-grid">
           <li>
             <div class="uk-card uk-card-default">
               <div class="uk-card-media-top">
-                <img src="https://getuikit.com/docs/images/photo3.jpg" alt="">
+
               </div>
               <div class="uk-card-body">
-                <h3 class="uk-card-title">Headline</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+                <h3 class="uk-card-title">Health-Related Quality of Life and Well-Being</h3>
+                <p>Health-related quality of life (HRQoL) is a multi-dimensional concept that includes domains related
+                  to physical, mental, emotional, and social functioning. </p>
+                <a target="_blank" class="uk-button uk-button-primary"
+                  href="https://www.healthypeople.gov/2020/about/foundation-health-measures/Health-Related-Quality-of-Life-and-Well-Being">Ler</a>
               </div>
             </div>
           </li>
@@ -119,9 +121,9 @@
               </div>
               <div class="uk-card-body">
                 <h3 class="uk-card-title">Documentação SSEQV</h3>
-                <p align="center"><span class="uk-label uk-label-danger uk-margin-small-right">PDF</span><a class="uk-button uk-button-text"
-                  href="assets/anexos/Sinopse_ProjetoSSEQV.pdf" download>
-                  Sinopse do Projeto SSEQV</a></p>
+                <p align="center"><span class="uk-label uk-label-danger uk-margin-small-right">PDF</span><a
+                    class="uk-button uk-button-text" href="assets/anexos/Sinopse_ProjetoSSEQV.pdf" download>
+                    Sinopse do Projeto SSEQV</a></p>
               </div>
             </div>
           </li>
