colocando logo sseqv

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -3,7 +3,7 @@
     <a class="uk-navbar-toggle" uk-navbar-toggle-icon href="" uk-toggle="target: #offcanvas-nav"></a>
   </div>
   <div class="uk-navbar-center">
-    <a class="uk-navbar-item uk-logo" href="#">SSEQV</a>
+    <a class="uk-navbar-item uk-logo" href="#"><img style="max-height: 50px;" src="assets/img/logo-sseqv.png"></a>
   </div>
 </nav>
 
@@ -12,8 +12,7 @@
   <div class="uk-navbar-left">
 
     <div class="uk-margin-large-left">
-      <a style="max-height: 50px;" class="uk-navbar-item uk-logo" href="#">SSEQV</a>
-      <span class="uk-text-meta">Sistema de Socialização em Qualidade de Vida do Ministério da Saúde</span>
+      <a class="uk-navbar-item uk-logo" href="#"><img style="max-height: 50px;" src="assets/img/logo-sseqv.png"></a>
     </div>
 
   </div>
