trocando logo apoema

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -3,7 +3,7 @@
   <div class="uk-child-width-1-2@m uk-child-width-1-1@s" uk-grid>
     <div class="uk-flex uk-flex-around logos-parceiros">
       <div>
-        <img class="apoema" src="assets/img/logo.png">
+        <img class="apoema" src="assets/img/logo.png" style="max-width: 10em">
       </div>
       <div>
         <img class="ms" src="assets/img/logo-ms.png">
