--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,10 @@
 <div class="margin uk-position-relative uk-visible-toggle uk-light" tabindex="-1"
      uk-slideshow="autoplay: true; animation: fade; max-height: 400; min-height: 400">
 
+    <div>
+        
+    </div>
+
     <ul class="uk-slideshow-items uk-margin-top">
         <li>
             <img alt="" src="https://getuikit.com/docs/images/light.jpg" uk-cover>
@@ -88,9 +92,7 @@
         <hr>
 
         <div uk-slider="autoplay: true; center: true; index: 1">
-
             <div class="uk-position-relative uk-visible-toggle" tabindex="-1">
-
                 <ul class="uk-slider-items uk-child-width-1-3@s uk-grid">
                     <div *ngFor="let publicacao of publicacoes">
                         <li>
