--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -3,7 +3,7 @@
     <a class="uk-navbar-toggle" uk-navbar-toggle-icon href="" uk-toggle="target: #offcanvas-nav"></a>
   </div>
   <div class="uk-navbar-center">
-    <a class="uk-navbar-item uk-logo" href="#"><img style="max-height: 50px;" src="assets/img/logo-sseqv.png"></a>
+    <a class="uk-navbar-item uk-logo" href="#"><img style="max-height: 50px;" src="assets/video/sseqv.gif"></a>
   </div>
 </nav>
 
@@ -12,7 +12,7 @@
   <div class="uk-navbar-left">
 
     <div class="uk-margin-large-left">
-      <a class="uk-navbar-item uk-logo" href="#"><img style="max-height: 50px;" src="assets/img/logo-sseqv.png"></a>
+      <a class="uk-navbar-item uk-logo" href="#"><img style="max-height: 50px;" src="assets/video/sseqv.gif"></a>
     </div>
 
   </div>
