--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -100,7 +100,7 @@
                                 <div class="uk-card-media-top">
                                 </div>
                                 <div class="uk-card-body">
-                                    <h3 class="uk-card-title">{{ publicacao.titulo }}</h3>
+                                    <h3 class="uk-card-title uk-text-center">{{ publicacao.titulo }}</h3>
                                     <p align="center"><span class="uk-label uk-label-danger uk-margin-small-right">{{ publicacao.label }}</span><a class="uk-button uk-button-text" href="{{ publicacao.link }}" download>{{ publicacao.descricao}}</a></p>
                                 </div>
                             </div>
