--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -55,7 +55,7 @@
                 <ul class="uk-slider-items uk-child-width-1-3@s uk-grid">
                     <div *ngFor="let noticia of noticias">
                         <li>
-                            <div class="uk-card uk-card-default">
+                            <div class="noticia uk-card uk-card-default">
                                 <div class="uk-card-media-top">
                                     <img src="{{ noticia.imagem }}" alt="">
                                 </div>
