adicionando demo-sseqv

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -33,8 +33,9 @@
         <li><a href="#">Ferramentas</a>
           <div class="uk-navbar-dropdown">
             <ul class="uk-nav uk-navbar-dropdown-nav">
-              <li><a href="http://pmo.institutoapoema.org">ProjeQtor</a></li>
-              <li><a href="https://github.com/kyriosdata/sseqv">GitHub</a></li>
+              <li><a target="_blank" href="../../assets/pages/demo-sseqv/index.html">Demo SSEQV</a></li>
+              <li><a target="_blank" href="https://github.com/kyriosdata/sseqv">GitHub</a></li>
+              <li><a target="_blank" href="http://pmo.institutoapoema.org">ProjeQtor</a></li>
             </ul>
           </div>
         </li>
@@ -63,8 +64,9 @@
       <li class="uk-parent">
         <a href="#">Ferramentas</a>
         <ul class="uk-nav-sub">
-          <li><a target="_blank" href="http://pmo.institutoapoema.org">ProjeQtor</a></li>
+          <li><a target="_blank" href="../../assets/pages/demo-sseqv/index.html">Demo SSEQV</a></li>
           <li><a target="_blank" href="https://github.com/kyriosdata/sseqv">GitHub</a></li>
+          <li><a target="_blank" href="http://pmo.institutoapoema.org">ProjeQtor</a></li>
         </ul>
       </li>
       <li><a href="#">Contato</a></li>
