--- a/src/assets/pages/demo-sseqv/assets/css/main.css
+++ b/src/assets/pages/demo-sseqv/assets/css/main.css
@@ -36,6 +36,17 @@ ol, ul {
 	list-style: none;
 }
 
+#titulo {
+	font-size: 2.3em;
+	margin-bottom: 30px;
+}
+
+#logo-sseqv {
+	margin-right: auto;
+	margin-left: auto;
+	margin-bottom: 20px;
+}
+
 blockquote, q {
 	quotes: none;
 }
