--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,24 +7,24 @@
 
     <ul class="uk-slideshow-items uk-margin-top">
         <li>
-            <img alt="" src="https://getuikit.com/docs/images/light.jpg" uk-cover>
-            <div class="uk-overlay uk-overlay-primary uk-position-bottom uk-text-center uk-transition-slide-bottom">
-                <h3 class="uk-margin-remove">1</h3>
-                <p class="uk-margin-remove">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <img alt="" src="assets/img/banner-sseqv1.jpg" style="object-fit:scale-down;" uk-cover>
+            <div class="uk-overlay uk-overlay-primary uk-position-bottom uk-text-center uk-transition-slide-bottom" >
+                <h3 class="uk-margin-remove">From Boston to Brussels: AI and the business of healthcare decision-making</h3>
+                <p class="uk-margin-remove"><a href="https://www.linkedin.com/pulse/from-boston-brussels-ai-business-healthcare-bernd-montag/">https://www.linkedin.com/pulse/from-boston-brussels-ai-business-healthcare-bernd-montag/</a></p>
             </div>
         </li>
         <li>
-            <img alt="" src="https://getuikit.com/docs/images/dark.jpg" uk-cover>
+            <img alt="" src="assets/img/banner-sseqv2.jpg" style="object-fit:scale-down;" uk-cover>
             <div class="uk-overlay uk-overlay-primary uk-position-bottom uk-text-center uk-transition-slide-bottom">
-                <h3 class="uk-margin-remove">2</h3>
-                <p class="uk-margin-remove">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <h3 class="uk-margin-remove">A blueprint for setting up an impactful patient experience program</h3>
+                <p class="uk-margin-remove"><a href="https://www.siemens-healthineers.com/news/insights-series-issue-3.html">https://www.siemens-healthineers.com/news/insights-series-issue-3.html</a></p>
             </div>
         </li>
         <li>
-            <img alt="" src="https://getuikit.com/docs/images/photo.jpg" uk-cover>
+            <img alt="" src="assets/img/banner-sseqv3.jpg" style="object-fit:scale-down;" uk-cover>
             <div class="uk-overlay uk-overlay-primary uk-position-bottom uk-text-center uk-transition-slide-bottom">
-                <h3 class="uk-margin-remove">3</h3>
-                <p class="uk-margin-remove">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <h3 class="uk-margin-remove">8 Technology Trends in Healthcare to Watch in 2019-2020</h3>
+                <p class="uk-margin-remove"><a href="https://mobidev.biz/blog/technology-trends-healthcare-digital-transformation">https://mobidev.biz/blog/technology-trends-healthcare-digital-transformation</a></p>
             </div>
         </li>
     </ul>
